PROJECT(photobooth-psu)
SET(PROJECT_NAME photobooth-psu)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_SYSTEM_NAME Generic)
SET(CMAKE_CROSSCOMPILING 1)
SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(CMAKE_C_COMPILER avr-gcc)

SET(CSTANDARD "-std=gnu99")
SET(CDEBUG "-gstabs")
SET(CWARN "-Wall -Wstrict-prototypes")
SET(CTUNING "-funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums")
SET(COPT "-Os")
SET(CMCU "-mmcu=atmega32u4")
SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "")
SET(CDEFS "-DF_CPU=16000000")


SET(CFLAGS "${CMCU} ${CDEBUG} ${CDEFS} ${COPT} ${CWARN} ${CSTANDARD} ${CEXTRA}")

SET(CMAKE_C_FLAGS ${CFLAGS})

SET(${PROJECT_NAME}_SOURCES
    main.c
    io_ports.c
    uart.c
    state_machine.c
    relais.c
    raspberry.c
    )


ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES})
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND avr-objcopy -O ihex -R .eeprom ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.hex)
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND avr-objcopy -I ihex ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.hex -O binary ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.bin)
ADD_CUSTOM_TARGET(upload ${CMAKE_COMMAND} ${PROJECT_SOURCE_DIR})

#ADD_CUSTOM_COMMAND(TARGET upload POST_BUILD COMMAND avrdude -V -c stk500v2 -p m2560 -b 115200 -P /dev/ttyACM0 -U flash:w:${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.hex)
#ADD_CUSTOM_COMMAND(TARGET upload POST_BUILD COMMAND avrdude -V -c usbtiny -p m328p -U flash:w:${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.hex)
#ADD_CUSTOM_COMMAND(TARGET upload POST_BUILD COMMAND stty -F /dev/ttyACM0 speed 1200)
#ADD_CUSTOM_COMMAND(TARGET upload POST_BUILD COMMAND stty -F /dev/ttyACM0 speed 115200)
ADD_CUSTOM_COMMAND(TARGET upload POST_BUILD COMMAND avrdude -V -c avr109 -p m32U4 -P /dev/ttyACM1 -U flash:w:${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.hex)
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS -D__AVR_LIBC_DEPRECATED_ENABLE__)
